# SimEPR

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run_simepr.bat  run_simepr.sh
.devcontainer/: devcontainer.json
.streamlit/: config.toml
docs/: CUSTOM_MODEL_FORMAT.md  REFERENCE_SPECTRA.md  RELEASE_AND_DOI.md  SimEPR_arXiv_preprint.md  SimEPR_paper.docx  WHITE_PAPER.md
epr_simfit/: __init__.py  about.py  batch.py  cli.py  constants.py  demo_data.py  evidence.py  export.py  fitter.py  interpretation.py  io.py  lineshapes.py  metadata_parser.py  model_comparison.py  model_library.py  model_suggester.py  plotting.py  powder.py  preprocessing.py  reference_library.py  report.py  simulator.py  spin_hamiltonian.py  spin_models.py  spin_operators.py  user_models.py  utils.py
examples/: README_examples.md  conditions_template.csv  demo_BMO_N2_light.asc  demo_OvBMO_N2_light.asc  demo_PBN_DMSO_water_light_blank.asc  demo_PdBMO_N2_light.asc  demo_PdOvBMO_Ar_light.asc  demo_PdOvBMO_N2_dark.asc  demo_PdOvBMO_N2_light.asc  demo_PdOvBMO_air_light.asc  demo_generic_cu_mn_screen.asc  demo_generic_nitroxide_spin_label.asc  demo_generic_organic_radical.asc
tests/: test_anisotropic_engine.py  test_simepr_public.py
