[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simepr"
version = "0.1.0"
description = "General high-field cw-EPR simulation, fitting, model comparison, and export GUI."
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Md Sakib Hasan Khan"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "plotly>=5.18",
  "streamlit>=1.31",
  "pydantic>=2.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["epr_simfit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
